[package]
name = "gt-audit"
version = "0.2.0"
edition = "2021"
authors = ["Artifactiq <hello@artifactiq.ai>"]
description = "Fast ground truth label validation for object detection datasets"
license = "MIT"
repository = "https://github.com/ARTIFACTIQ/gt-audit"
keywords = ["machine-learning", "object-detection", "yolo", "data-quality"]
categories = ["command-line-utilities", "science"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Image processing
image = "0.25"

# ML inference via ONNX Runtime
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }
ndarray = "0.16"

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP for model downloads
ureq = { version = "2", features = ["json"] }

# Progress bars
indicatif = "0.17"

# Error handling
anyhow = "1"
thiserror = "1"

# Template for HTML reports
minijinja = "2"

# Misc
dirs = "5"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
